clusters/holton-talos-prod/keycloak/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak
  namespace: keycloak
spec:
  parentRefs:
  - name: keycloak-gateway
    namespace: keycloak
  hostnames:
  - sso.holton.xyz
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: keycloak-http
      port: 80
